unpackaged/main/default/objects/InsideSurvey__c/InsideSurvey__c.object-meta.xml
<CustomObject>
    <label>InsideSurvey</label>
    <nameField>
        <label>Inside Survey Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InsideSurvey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>