unpackaged/main/default/objects/InsideSurvey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>InsideSurvey</relationshipLabel>
    <relationshipName>InsideSurvey</relationshipName>
    <type>Lookup</type>
</CustomField>