unpackaged/main/default/objects/InsideSurvey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>InsideSurvey</relationshipLabel>
    <relationshipName>InsideSurvey</relationshipName>
    <type>Lookup</type>
</CustomField>