unpackaged/main/default/objects/InsideSurvey__c/fields/InsideConversation__c.field-meta.xml
<CustomField>
    <fullName>InsideConversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Conversation</label>
    <referenceTo>InsideConversation__c</referenceTo>
    <relationshipLabel>InsideSurvey</relationshipLabel>
    <relationshipName>InsideSurvey</relationshipName>
    <type>Lookup</type>
</CustomField>