unpackaged/main/default/objects/InsideSurvey__c/fields/InsideConversationId__c.field-meta.xml
<CustomField>
    <fullName>InsideConversationId__c</fullName>
    <label>InsideConversationId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>