unpackaged/main/default/objects/InsideSurvey__c/fields/InsideSocialConversation__c.field-meta.xml
<CustomField>
    <fullName>InsideSocialConversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Social Conversation</label>
    <referenceTo>InsideSocialConversation__c</referenceTo>
    <relationshipLabel>InsideSurvey</relationshipLabel>
    <relationshipName>InsideSurvey</relationshipName>
    <type>Lookup</type>
</CustomField>