unpackaged/main/default/objects/InsideSurvey__c/fields/SurveyResults__c.field-meta.xml
<CustomField>
    <fullName>SurveyResults__c</fullName>
    <label>Survey Results</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>